style: use mantine ui styles

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,18 @@
     "regen-api": "openapi-typescript http://localhost:8000/openapi.json -o ./src/queries/schema.d.ts"
   },
   "dependencies": {
-    "@mantine/core": "^7.17.3",
-    "@mantine/form": "^7.17.3",
-    "@mantine/hooks": "^7.17.3",
+    "@emotion/react": "^11.14.0",
+    "@mantine/carousel": "^8.0.1",
+    "@mantine/code-highlight": "^8.0.1",
+    "@mantine/core": "^8.0.1",
+    "@mantine/dates": "^8.0.1",
+    "@mantine/dropzone": "^8.0.1",
+    "@mantine/form": "^8.0.1",
+    "@mantine/hooks": "^8.0.1",
+    "@mantine/notifications": "^8.0.1",
+    "@mantine/nprogress": "^8.0.1",
+    "@mantine/spotlight": "^8.0.1",
+    "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-query": "^5.71.1",
     "@tanstack/react-query-devtools": "^5.71.1",
     "react": "^19.1.0",
@@ -36,13 +45,11 @@
     "@storybook/react": "^8.6.11",
     "@storybook/react-vite": "^8.6.11",
     "@storybook/test": "^8.6.11",
-    "@tailwindcss/postcss": "^4.0.17",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -50,10 +57,8 @@
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "openapi-typescript": "^7.6.1",
-    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "storybook": "^8.6.11",
-    "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
