--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-query": "^5.71.1",
     "@tanstack/react-query-devtools": "^5.71.1",
+    "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1"
